--- a/webjs/src/main/webapp/views/view_friends.html
+++ b/webjs/src/main/webapp/views/view_friends.html
@@ -6,7 +6,8 @@
     <script type="text/javascript" src="js/postJSON.js"></script>
     <script type="text/javascript">
         function deleteFriend(userId,friendId){
-            sendJSON("/user/friends?type=1&idu="+userId+"&idf="+friendId,"",function(response){
+            var jsonId = JSON.stringify({userid: userId,friendid: friendId});
+            sendJSON("/user/friends?type=1",jsonId,function(response){
                     viewFriends();
                 });
         };
