Style of views is configured

--- a/webjs/src/main/webapp/views/create_friend.html
+++ b/webjs/src/main/webapp/views/create_friend.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/main_style.css">
     <title>Title</title>
     <script type="text/javascript" src="js/postJSON.js"></script>
     <script >
@@ -20,6 +21,7 @@
 </head>
 <body>
 <div class="center">
+    <h1>Создать друга для пользователя</h1>
     <div class="form">
         <div>
             <label for="name">Имя</label>
