Hibernate storage i created

--- a/webjs/src/main/webapp/views/view_friends.html
+++ b/webjs/src/main/webapp/views/view_friends.html
@@ -60,8 +60,8 @@
         <script type="text/javascript">
             var parameterId=location.href.split("?")[1];
             var refToForm="javascript:document.location='create_friend.html?"+parameterId+"'";
-            var refToCreateUser="<input type=\"button\" onclick=\""+ refToForm+"\" value=\"Добавить друга\">";
-            document.getElementById("toCreate").innerHTML=refToCreateUser;
+            var buttonCreateFriend="<input type=\"button\" onclick=\""+ refToForm+"\" value=\"Добавить друга\">";
+            document.getElementById("toCreate").innerHTML=buttonCreateFriend;
         </script>
     </div>
 </body>
